--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     min-height: 100vh;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(45deg, rgba(166, 166, 166,0.4),rgba(71, 71, 107,0.8)), url("/images/img_bg.jpg");
+    background: linear-gradient(45deg, rgba(166, 166, 166,0.4),rgba(71, 71, 107,0.8)), url(images/img_bg.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
