--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     background-color: rgba(163, 163, 194, 0.7);
     padding: 28px;
     border-radius: 10px;
-    box-shadow: 3px 7px 10px rgba(255, 204, 204, 0.7);
+    box-shadow: 0px 5px 10px 2px rgba(255, 204, 204, 0.7);
     width: 90%;
     margin: 10px;
     max-width: 450px;
@@ -26,7 +26,7 @@ body {
 
 .container:hover {
     background-color: rgba(163, 163, 194, 0.8);
-    box-shadow: 5px 10px 10px rgba(255, 204, 204, 0.9);
+    box-shadow: 0px 8px 12px 2px rgba(255, 204, 204, 0.9);
     transition: 0.8s;
 }
 
