--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap');
+
 body {
     margin: 0;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(45deg, rgba(166, 166, 166,0.4),rgba(71, 71, 107,0.8)), url(images/img_bg.jpg);
+    background: linear-gradient(45deg,
+                                rgba(166, 166, 166,0.4),
+                                rgba(71, 71, 107,0.8)),
+                                url(images/img_bg.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -12,21 +17,21 @@ body {
 }
 
 .container {
-    background-color: rgba(163, 163, 194, 0.7);
-    padding: 28px;
-    border-radius: 10px;
-    box-shadow: 0px 5px 10px 2px rgba(255, 204, 204, 0.7);
-    width: 90%;
-    margin: 10px;
     max-width: 450px;
+    margin: 10px;
+    padding: 28px;
     text-align: center;
     font-size: 18px;
     font-weight: 500;
+    border-radius: 10px;
+    background-color: rgba(163, 163, 194, 0.7);
+    box-shadow: 0 0 10px 2px rgba(255, 204, 204, 0.7);
+    transition: 0.8s;
 }
 
 .container:hover {
-    background-color: rgba(163, 163, 194, 0.8);
-    box-shadow: 0px 8px 12px 2px rgba(255, 204, 204, 0.9);
+    background-color: rgba(163, 163, 194, 0.9);
+    box-shadow: 0 0 12px 2px rgba(255, 204, 204, 0.9);
     transition: 0.8s;
 }
 
@@ -36,14 +41,15 @@ body {
 }
 
 .input {
-    height: 53px;
-    width: 300px;
+    height: 50px;
+    width: 340px;
     background-color: rgba(255, 255, 255, 0.4);
     border-color: rgba(255, 255, 255, 0.2);
     font-size: 18px;
-    padding: 0 42px;
+    padding: 0 20px;
     border-radius: 10px;
     outline: none;
+    transition: all 0.4s ease-in-out;
 }
 
 .input::placeholder {
@@ -52,16 +58,45 @@ body {
 }
 
 .input:focus {
-    box-shadow: 4px 4px 10px rgba(176,196,222, 0.9);
+    box-shadow: 0px 0px 8px 2px rgba(176,196,222, 0.9);
     background-color: rgba(240,248,255,0.7);
     border-color: rgba(135,206,250, 0.5);
+    transition: all 0.4s ease-in-out;
 }
 
 .meaning_container {
     display: none;
 }
 
-@media (max-width: 413px) {
+/* 'Designed by' element*/
+.footer {
+    position: fixed;
+    bottom: 5px;
+    z-index: 2;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 0.8rem;
+    font-weight: 800;
+    color: #f4bbff;
+    text-shadow: 0 0 6px rgba(0, 0, 0, 0.8);
+}
+
+.footer a {
+    display: inline-block;
+    font-size: 1rem;
+    text-decoration: none;
+    color: #c09999;
+    text-shadow: 0 0 4px rgba(85,85,85,.8);
+    transition: all 0.4s ease-in-out;
+}
+
+.footer a:hover {
+    transform: translateY(-3px);
+    color: #f0ffff ;
+    text-shadow: 0 0 4px rgba(255,240,245,.8);
+    transition: all 0.4s ease-in-out;
+}
+
+@media (max-width: 500px) {
     .container {
         width: 70%;
         margin: 10%;
@@ -71,10 +106,10 @@ body {
         margin-bottom: 10%;
     }
     .input {
-        width: 180px;
-        height: 43px;
+        width: 80%;
+        height: 40px;
         border-radius: 10px;
-        padding: 0 12px;
+        padding: 0 10px;
     }
     .info_text {
         font-size: 14px;
