--- a/style.css
+++ b/style.css
@@ -42,14 +42,24 @@ body {
   text-shadow: 2px 2px 5px rgba(99, 81, 71, 0.9);
 }
 
+.container_search {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .input {
   height: 50px;
   width: 340px;
   background-color: rgba(255, 255, 255, 0.4);
-  border-color: rgba(255, 255, 255, 0.2);
+  border: none;
+  /* border-color: rgba(255, 255, 255, 0.2); */
   font-size: 18px;
   padding: 0 20px;
-  border-radius: 10px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  /* border-radius: 10px; */
   outline: none;
   transition: all 0.4s ease-in-out;
 }
@@ -62,7 +72,24 @@ body {
 .input:focus {
   box-shadow: 0px 0px 8px 2px rgba(176, 196, 222, 0.9);
   background-color: rgba(240, 248, 255, 0.7);
-  border-color: rgba(135, 206, 250, 0.5);
+  /* border-color: rgba(135, 206, 250, 0.5); */
+  transition: all 0.4s ease-in-out;
+}
+
+.btn {
+  height: 50px;
+  width: 50px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.4);
+  border: none;
+  cursor: pointer;
+  transition: all 0.4s ease-in-out;
+}
+
+.btn:hover {
+  background-color: rgba(240, 248, 255, 0.7);
+  box-shadow: 0px 0px 8px 2px rgba(176, 196, 222, 0.9);
   transition: all 0.4s ease-in-out;
 }
 
@@ -136,8 +163,14 @@ noscript h3 {
   .input {
     width: 80%;
     height: 40px;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     padding: 0 10px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+  }
+  .btn {
+    width: 40px;
+    height: 40px;
   }
   .info_text {
     font-size: 14px;
