--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@ body {
       rgba(166, 166, 166, 0.4),
       rgba(71, 71, 107, 0.8)
     ),
-    url(images/img_bg.jpg);
+    url(../images/img_bg.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -178,6 +178,7 @@ noscript h3 {
   box-shadow: 0 0 4px rgba(255, 240, 245, 0.8);
 }
 
+/* Spinner element */
 .spinner {
   display: none;
 }
