Update spinner style properties, add comments

--- a/styles/spinner/spinner.css
+++ b/styles/spinner/spinner.css
@@ -1,36 +1,3 @@
-@-moz-keyframes throbber-loader {
-  0% {
-    background: #dde2e7;
-  }
-  10% {
-    background: #6b9dc8;
-  }
-  40% {
-    background: #dde2e7;
-  }
-}
-@-webkit-keyframes throbber-loader {
-  0% {
-    background: #dde2e7;
-  }
-  10% {
-    background: #6b9dc8;
-  }
-  40% {
-    background: #dde2e7;
-  }
-}
-@keyframes throbber-loader {
-  0% {
-    background: #dde2e7;
-  }
-  10% {
-    background: #6b9dc8;
-  }
-  40% {
-    background: #dde2e7;
-  }
-}
 /* :not(:required) hides these rules from IE9 and below */
 .throbber-loader:not(:required) {
   -moz-animation: throbber-loader 1000ms 300ms infinite ease-out;
@@ -40,7 +7,7 @@
   display: inline-block;
   position: absolute;
   text-indent: -9999px;
-  width: 0.9em;
+  width: 1em;
   height: 1.5em;
   margin: 0 1.6em;
 }
@@ -49,7 +16,7 @@
   background: #dde2e7;
   content: "\x200B";
   display: inline-block;
-  width: 0.9em;
+  width: 1em;
   height: 1.5em;
   position: absolute;
   top: 0;
@@ -65,4 +32,39 @@
   -webkit-animation: throbber-loader 1000ms 450ms infinite ease-out;
   animation: throbber-loader 1000ms 450ms infinite ease-out;
   right: -1.6em;
+}
+
+/* Animation */
+@-moz-keyframes throbber-loader {
+  0% {
+    background: #805380;
+  }
+  10% {
+    background: #802980;
+  }
+  40% {
+    background: #805380;
+  }
+}
+@-webkit-keyframes throbber-loader {
+  0% {
+    background: #805380;
+  }
+  10% {
+    background: #802980;
+  }
+  40% {
+    background: #805380;
+  }
+}
+@keyframes throbber-loader {
+  0% {
+    background: #805380;
+  }
+  10% {
+    background: #802980;
+  }
+  40% {
+    background: #805380;
+  }
 }
