--- a/styles/style.css
+++ b/styles/style.css
@@ -25,13 +25,15 @@ body {
   text-align: center;
   font-size: 18px;
   font-weight: 500;
-  border-radius: 10px;
+  border: 2px solid rgba(255, 204, 204, 0.3);
+  border-radius: 6px;
   background-color: rgba(163, 163, 194, 0.7);
   box-shadow: 0 0 10px 2px rgba(255, 204, 204, 0.7);
   transition: 0.8s;
 }
 
 .container:hover {
+  border: 2px solid rgba(255, 204, 204, 0.8);
   background-color: rgba(163, 163, 194, 0.9);
   box-shadow: 0 0 12px 2px rgba(255, 204, 204, 0.9);
   transition: 0.8s;
@@ -56,13 +58,14 @@ body {
   border: none;
   font-size: 18px;
   padding: 0 20px;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
+  border-top-left-radius: 22px;
+  border-bottom-left-radius: 22px;
   outline: none;
   transition: all 0.4s ease-in-out;
 }
 
 .input::placeholder {
+  font-style: italic;
   font-size: 14px;
   color: rgba(38, 67, 72, 0.9);
 }
@@ -76,8 +79,8 @@ body {
 .btn {
   height: 50px;
   width: 50px;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
+  border-top-right-radius: 22px;
+  border-bottom-right-radius: 22px;
   background-color: rgba(255, 255, 255, 0.4);
   border: none;
   cursor: pointer;
