--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,17 @@ body {
   background-color: rgba(163, 163, 194, 0.7);
   box-shadow: 0 0 10px 2px rgba(255, 204, 204, 0.7);
   transition: 0.8s;
+  transform: scale(1) translateY(0);
+  animation: scale 1s ease-in-out forwards;
+}
+
+@keyframes scale {
+  from {
+    transform: scale(0) translateY(-100%);
+  }
+  to {
+    transform: scale(1) translateY(0);
+  }
 }
 
 .container:hover {
